fix: text colors on mobile website

--- a/client/src/styles/aboutme.css
+++ b/client/src/styles/aboutme.css
@@ -32,6 +32,7 @@
   max-width: 800px;
   padding: 20px;
   margin: auto;
+  color: black;
 }
 
 .back-home-button {
